infrastructure/kubernetes/twitter-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter-backend
  labels:
    app: twitter-backend
spec:
  replicas: 2
  selector: 
    matchLabels: 
      app: twitter-backend
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: twitter-backend
    spec:
      containers:
        - image: devopschatter/chatter-server:latest
          imagePullPolicy: Always
          name: twitter-backend
          ports:
          - containerPort: 5000
