infrastructure/kubernetes/twitter-redis-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: twitter-redis-lb
  labels:
    app: twitter-redis-lb
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: twitter-redis
