infrastructure/kubernetes/twitter-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: twitter-backend-lb
  labels:
    app: twitter-backend-lb
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: twitter-backend
