infrastructure/kubernetes/ingress-controller-conf.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-node-sample-helloworld
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # Uncomment the below to only allow traffic from this domain and route based on it
    # - host: my-host # your domain name with A record pointing to the nginx-ingress-controller IP
    - http:
        paths:
        - path: / # Everything on this path will be redirected to the rewrite-target
          backend:
            serviceName: nginx # the exposed svc name and port
            servicePort: 80
        - path: /auth # Everything on this path will be redirected to the rewrite-target
          backend:
            serviceName: nginx # the exposed svc name and port
            servicePort: 80
        - path: /home 
          backend: 
            serviceName: nginx
            servicePort: 80
